# strfPy

./: ECOGLoad.ipynb  ECoGFilter.ipynb  README.rst  environment.yml  laguerre.ipynb  mrfpy_convolution.ipynb  mrfpy_est.ipynb  mrfpy_event_convolution.ipynb  plotFile.ipynb  r2_comparison.ipynb  runFile.ipynb  strf_nwb.ipynb  strf_nwb_explore.ipynb  strf_nwb_fetridge.ipynb  strf_nwb_st.ipynb  strfpy_est.ipynb  unittest_trnDirectFit.py  validation.ipynb
PaperFigs/: summaryStats.ipynb
brainbank_analysis/: README.md  analysis.py  create_config_files.py  model_multiple_features_notebook.ipynb  preprocess_data.py  utils.py
matlab/directfit_tutorial/: Temp_hashing_name_0.tmp  directfit_exercise.asv  directfit_exercise.m  directfit_tutorial.m
matlab/directfit_tutorial/.svn/: entries
matlab/directfit_tutorial/direct_fit/: df_cal_AVG.m  df_cal_CrossCorr.m  df_internal_cal_CrossCorr.m
matlab/directfit_tutorial/strflab/auxFunc/direct_fit/: direct_fit.m
matlab/directfit_tutorial/strflab/layer_3optim/: trnDirectFit.m
matlab/directfit_tutorial/strflab/models/lin/: linInit.m
module/: pyproject.toml
module/strfpy/: DirectFit.py  cache.py  calcAutoCorr.py  calcAvg.py  calcCrossCorr.py  calcSegmentedModel.py  calcStrf.py  calcStrf_script.py  findDatasets.py  loadData.py  makePSTH.py  plotTfrep.py  preprocSound.py  regNDI.py  stim_utils.py  strfSetup.py  timeFreq.py  trnDirectFit.py
python/: exercise-direct_fit.ipynb  strf-estimation.ipynb  tutorial-coherence.ipynb
